objects/Opportunity.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <businessProcesses>
        <fullName>Strategy</fullName>
        <description>SFC-2356</description>
        <isActive>true</isActive>
        <values>
            <fullName>Angebot</fullName>
        </values>
        <values>
            <fullName>In Verhandlung</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
        </values>
        <values>
            <fullName>Qualifizierung</fullName>
        </values>
        <values>
            <fullName>Ziel-%2FNutzenanalyse %26 Inhaltsdefinition</fullName>
        </values>
        <values>
            <fullName>gewonnen</fullName>
        </values>
        <values>
            <fullName>verloren</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Placement</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Anfrage Einrichtung</fullName>
        </values>
        <values>
            <fullName>In Verhandlung</fullName>
        </values>
        <values>
            <fullName>Kandidat%2F -in vorgeschlagen</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
        </values>
        <values>
            <fullName>Vertragsabwicklung</fullName>
        </values>
        <values>
            <fullName>Vorstellungsgespräch</fullName>
        </values>
        <values>
            <fullName>gewonnen</fullName>
        </values>
        <values>
            <fullName>verloren</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vertretung</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Anfrage Kandidaten</fullName>
        </values>
        <values>
            <fullName>Kandidat%2F -in vorgeschlagen</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
        </values>
        <values>
            <fullName>Teilweise Gewonnen</fullName>
        </values>
        <values>
            <fullName>Vertrag versendet</fullName>
        </values>
        <values>
            <fullName>gewonnen</fullName>
        </values>
        <values>
            <fullName>verloren</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Recruitment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Anfrage Kandidaten</fullName>
        </values>
        <values>
            <fullName>In Verhandlung</fullName>
        </values>
        <values>
            <fullName>Kandidat%2F -in vorgeschlagen</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
        </values>
        <values>
            <fullName>Vertragsabwicklung</fullName>
        </values>
        <values>
            <fullName>Vorstellungsgespräch</fullName>
        </values>
        <values>
            <fullName>gewonnen</fullName>
        </values>
        <values>
            <fullName>verloren</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>KAM Aqcuisition</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In Verhandlung</fullName>
        </values>
        <values>
            <fullName>Neu</fullName>
        </values>
        <values>
            <fullName>gewonnen</fullName>
        </values>
        <values>
            <fullName>verloren</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>T__c</fullName>
        <label>Tariff</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increase in Sales</fullName>
                </value>
                <value>
                    <fullName>Site Expansion</fullName>
                </value>
                <value>
                    <fullName>Increased Competitiveness</fullName>
                </value>
                <value>
                    <fullName>Cross Selling</fullName>
                </value>
                <value>
                    <fullName>Preferred Supplier</fullName>
                </value>
                <value>
                    <fullName>Onsite Management</fullName>
                </value>
                <value>
                    <fullName>Master Vendor/MSP</fullName>
                </value>
                <value>
                    <fullName>Process Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bezug__c</fullName>
        <label>Bezug</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bezug</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus__c</fullName>
        <label>Bonus</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_One__c</fullName>
        <description>This is only for report purposes! Do not delete</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <label>Date to Ⓜ️</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <formula>PreisKlinik__c / HonorarKandidat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zusatz__c</fullName>
        <label>Zusatz</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unfall</fullName>
                </value>
                <value>
                    <fullName>Notfall</fullName>
                </value>
                <value>
                    <fullName>Schmerz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concern__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFC-2356</description>
        <label>Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Einheit__c</fullName>
        <label>Einheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Einheit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <description>https://doctari.atlassian.net/browse/SFC-3050
Die User sollen auf der Opportunity die Möglichkeit bekommen, in einem Feld Stichworte für die Volltextsuche zu hinterlegen. (Feldname: Stichwortsuche CV)</description>
        <inlineHelpText>Die in Textkernel hinterlegten Lebensläufe können nach Schlagworten durchsucht werden.Trenne die Schlagworte mit einem Semikolon</inlineHelpText>
        <label>Keyword search CV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station Ⓜ️</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ITS</fullName>
                </value>
                <value>
                    <fullName>ANÄ</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>Ki-ITS</fullName>
                </value>
                <value>
                    <fullName>ZNA</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>MTRA</fullName>
                </value>
                <value>
                    <fullName>Reha</fullName>
                </value>
                <value>
                    <fullName>GP</fullName>
                </value>
                <value>
                    <fullName>Amb PD</fullName>
                </value>
                <value>
                    <fullName>PfHeim</fullName>
                </value>
                <value>
                    <fullName>GYN</fullName>
                </value>
                <value>
                    <fullName>GER</fullName>
                </value>
                <value>
                    <fullName>CHI</fullName>
                </value>
                <value>
                    <fullName>HNO</fullName>
                </value>
                <value>
                    <fullName>INN</fullName>
                </value>
                <value>
                    <fullName>NEU</fullName>
                </value>
                <value>
                    <fullName>ORT</fullName>
                </value>
                <value>
                    <fullName>PSY</fullName>
                </value>
                <value>
                    <fullName>PNE</fullName>
                </value>
                <value>
                    <fullName>URO</fullName>
                </value>
                <value>
                    <fullName>KAR</fullName>
                </value>
                <value>
                    <fullName>GSO</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>KRS</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>NEO</fullName>
                </value>
                <value>
                    <fullName>HYG</fullName>
                </value>
                <value>
                    <fullName>WEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zeitbis__c</fullName>
        <label>Zeit bis</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Zeitvon__c</fullName>
        <label>Zeit von</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <label>Date From Ⓜ️</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kandidat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kandidat</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Kandidat)</relationshipLabel>
        <relationshipName>OppPlacementArzt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <label>Nächster Schritt</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_ID__c</fullName>
        <displayFormat>OD-{00000}</displayFormat>
        <label>Offer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position Ⓜ️</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistenzarzt</fullName>
                </value>
                <value>
                    <fullName>Facharzt</fullName>
                </value>
                <value>
                    <fullName>Chefarzt</fullName>
                </value>
                <value>
                    <fullName>Oberarzt</fullName>
                </value>
                <value>
                    <fullName>Leitender OA</fullName>
                </value>
                <value>
                    <fullName>Leitender CA</fullName>
                </value>
                <value>
                    <fullName>Mitarbeiter</fullName>
                </value>
                <value>
                    <fullName>Stellvertretende Leitung</fullName>
                </value>
                <value>
                    <fullName>Abteilungsleitung</fullName>
                </value>
                <value>
                    <fullName>Leitung</fullName>
                </value>
                <value>
                    <fullName>sonstige</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RadiusKm__c</fullName>
        <label>Umkreis km (vom Ort)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>Deutschlandweit</fullName>
                </value>
                <value>
                    <fullName>Schweizweit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abteilung__c</fullName>
        <label>Abteilung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Abteilung</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>Displays the Birthdate of the PersonAccount.
Robin S. 17.06.2019</description>
        <formula>Text(Account.PersonContact.Birthdate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_type__c</fullName>
        <description>Shows the care type of the account dependent on the record type of the Account.
Robin S. 13.06.2019</description>
        <formula>IF( Account.RecordType.DeveloperName = &quot;doctorsSurgery&quot;, 
(IF(INCLUDES( Account.DoctorsSurgeryType__c  , &quot;Einzelpraxis&quot;), &quot;Einzelpraxis&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.DoctorsSurgeryType__c , &quot;Gemeinschaftspraxis&quot;), &quot;Gemeinschaftspraxis&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.DoctorsSurgeryType__c , &quot;Medizinisches Versorgungszentrum&quot;), &quot;Medizinisches Versorgungszentrum&quot;, NULL)  + BR() +
IF(INCLUDES( Account.DoctorsSurgeryType__c , &quot;Ambulanz&quot;), &quot;Ambulanz&quot;, NULL)), Text( Account.HealthcareInstitutionType__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge__c</fullName>
        <label>Challenges/Obstacles</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dienstart__c</fullName>
        <label>Dienstart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dienstart</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <description>This field is used for the offer mails.
01.04.2019 Robin S.</description>
        <inlineHelpText>Anrede und Grußform werden automatisch erstellt</inlineHelpText>
        <label>Email Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Large_City__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large City</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LostReason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetName>Grund_fuer_Verlust</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLZ_Gebiet__c</fullName>
        <label>PLZ Gebiet</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Deadline__c</fullName>
        <description>sets &quot;Tuesday&quot; (if today) or &quot;last Tuesday&quot; as deadline date for reporting</description>
        <formula>CASE(
      MOD(TODAY() - DATE(1900, 1, 7),7),
         0, TODAY()-5,
         1, TODAY()-6,
         3, TODAY()-1,
         4, TODAY()-2,
         5, TODAY()-3,
         6, TODAY()-4,
         Today()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T] IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geburtsjahr__c</fullName>
        <formula>year( Kandidat__r.Birthdate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geburtsjahr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreisKlinik__c</fullName>
        <formula>HonorarKandidat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preis Klinik</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reisekosten__c</fullName>
        <label>Reisekosten</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reisekosten</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZeitEinheit__c</fullName>
        <label>Zeit Einheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Einheit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <label>Compensation Ⓜ️</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tarif</fullName>
                </value>
                <value>
                    <fullName>Außertariflich</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_PP__c</fullName>
        <description>SFC-2558</description>
        <label>Condition PP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyText__c</fullName>
        <formula>text( CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dienstzeiten__c</fullName>
        <label>Dienstzeiten</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dienstzeiten</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Comment__c</fullName>
        <label>Goal Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfBeds__c</fullName>
        <description>Shows the Number of beds of the account.
Robin S. 13.06.2019</description>
        <formula>Text( Account.NumberOfBeds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Beds</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprachniveau__c</fullName>
        <label>Sprachniveau</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sprachniveau</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StationMulti__c</fullName>
        <label>Station</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StationMulti</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <description>This is the subject line for the offer mail.
Robin S. 12.04.2019</description>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Doctor_Job__c</fullName>
        <description>This field is stored by the DLRS and is used for the Opportunity automatic name process. 
Robin S. 26.02.2019</description>
        <label>[T] Doctor Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Care__c</fullName>
        <label>Type of Care</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Einzelpraxis</fullName>
                </value>
                <value>
                    <fullName>Gemeinschaftspraxis</fullName>
                </value>
                <value>
                    <fullName>Medizinisches Versorgungszentrum</fullName>
                </value>
                <value>
                    <fullName>Ambulanz</fullName>
                </value>
                <value>
                    <fullName>Akutklinik</fullName>
                </value>
                <value>
                    <fullName>Rehaklinik</fullName>
                </value>
                <value>
                    <fullName>Rehaklinik mit Akutbereich</fullName>
                </value>
                <value>
                    <fullName>Haus der Grund- und Regelversorgung</fullName>
                </value>
                <value>
                    <fullName>Haus der Maximalversorgung</fullName>
                </value>
                <value>
                    <fullName>Schwerpunktkrankenhaus</fullName>
                </value>
                <value>
                    <fullName>Pflegeheim</fullName>
                </value>
                <value>
                    <fullName>Ambulanter Pflegedienst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>K_ndigung_zum__c</fullName>
        <label>Kündigung zum</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>K_ndigung_zum</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_checked__c</fullName>
        <description>SFC-2356</description>
        <label>Offer checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stellenumfang__c</fullName>
        <label>Stellenumfang</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vollzeit</fullName>
                </value>
                <value>
                    <fullName>Teilzeit</fullName>
                </value>
                <value>
                    <fullName>Egal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Campaign_Id__c</fullName>
        <label>[T]Campaign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_CheckCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T]_CheckCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admission_from__c</fullName>
        <label>Admission from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Sales__c</fullName>
        <description>SFC-2356</description>
        <label>Expected Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Beds__c</fullName>
        <label>Number of beds</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_released__c</fullName>
        <description>SFC-2356</description>
        <label>Offer released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>Shows the Parent Account of the related Account.
Robin S. 13.06.2019</description>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlacementModel__c</fullName>
        <label>Placement Model Ⓜ️</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vermittlungsmodell</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostalCodeArea__c</fullName>
        <formula>LEFT(IF( ISBLANK(PlaceofActionAccount__r.BillingPostalCode), Account.BillingPostalCode, PlaceofActionAccount__r.BillingPostalCode), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostalCodeAreaHealthCareInstitution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Einrichtung</fullName>
                </value>
                <value>
                    <fullName>doctari (subsidiär)</fullName>
                </value>
                <value>
                    <fullName>Kandidat (vollumfänglich)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConditionClinic__c</fullName>
        <label>Condition Clinic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Einrichtungsart__c</fullName>
        <label>Einrichtungsart</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Einrichtungsart</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HonorarKandidat__c</fullName>
        <label>Honorar Kandidat</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstitutionType__c</fullName>
        <formula>TEXT( Account.HealthcareInstitutionType__c )</formula>
        <label>Institution Type Ⓜ️</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K_ndigungsfrist__c</fullName>
        <label>Kündigungsfrist (Tage)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastStageUpdate__c</fullName>
        <label>Last Stage Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_submitted__c</fullName>
        <description>SFC-2356</description>
        <label>Offer submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PostalCode_Area__c</fullName>
        <description>Global List is used for this field.
Robin S. 17.06.2019</description>
        <label>PostalCode Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PLZ_Gebiet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Caregiver_Job__c</fullName>
        <description>This field is stored by the DLRS and is used for the Opportunity automatic name process.
Robin S. 21.02.2019</description>
        <label>[T] Caregiver Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abteilung_bietet__c</fullName>
        <inlineHelpText>z.Bsp. Diagnostik, Therapie...</inlineHelpText>
        <label>Abteilung bietet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AsSoonAsPossible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As Soon As Possible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Position__c</fullName>
        <description>Current position of the doctor.
Robin S. 17.06.2019</description>
        <label>Current Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Position</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DetailLostReason__c</fullName>
        <label>Detail Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LostReason__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>DetailsVerlustgrund</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherInformation__c</fullName>
        <label>Other Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_Opportunity_ID__c</fullName>
        <label>[T] Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tarifbezeichnung__c</fullName>
        <label>Tarifbezeichnung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionClinicFA__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Stundensätze angeben</inlineHelpText>
        <label>Condition Clinic (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_Doctors__c</fullName>
        <description>SFC-2558</description>
        <label>Condition Doctors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Person_GF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person GF</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Person GF)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_workplace__c</fullName>
        <description>Desired workplace of the doctor.
Robin S. 17.06.2019</description>
        <label>Desired workplace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Care Facility</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation Clinic</fullName>
                </value>
                <value>
                    <fullName>Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>